@@ -14,7 +14,7 @@
 <{if $module_credits}>
 	<table width='100%' cellspacing="1" cellpadding="3" border="0" class="outer" style="margin-top: 15px;">
 		<tr>
-			<td class='bg3'><b><{$smarty.const._CO_SOBJECT_DEVELOPER_CREDITS}></b></td>
+			<td class='bg3'><b><{$smarty.const._MODABOUT_DEVELOPER_CREDITS}></b></td>
 		</tr>
 
 		<tr>
@@ -146,21 +146,21 @@
 	<{if $module_submit_bug}>
 		<tr>
 			<td class='head' width = '200px'><{$smarty.const._MODABOUT_MODULE_BUG}></td>
-			<td class='even'><a href="<{$module_submit_bug}>" rel="external"><{$smarty.const._CO_SOBJECT_MODULE_SUBMIT_BUG}></a></td>
+			<td class='even'><a href="<{$module_submit_bug}>" rel="external"><{$smarty.const._MODABOUT_MODULE_SUBMIT_BUG}></a></td>
 		</tr>
 	<{/if}>
 
 	<{if $module_submit_feature}>
 		<tr>
 			<td class='head' width = '200px'><{$smarty.const._MODABOUT_MODULE_FEATURE}></td>
-			<td class='even'><a href="<{$module_submit_feature}>" rel="external"><{$smarty.const._CO_SOBJECT_MODULE_SUBMIT_FEATURE}></a></td>
+			<td class='even'><a href="<{$module_submit_feature}>" rel="external"><{$smarty.const._MODABOUT_MODULE_SUBMIT_FEATURE}></a></td>
 		</tr>
 	<{/if}>
 </table>
 
 <table width='100%' cellspacing="1" cellpadding="3" border="0" class="outer" style="margin-top: 15px;">
 	<tr>
-		<td class='bg3'><b><{$smarty.const._CO_SOBJECT_MODULE_DISCLAIMER}></b></td>
+		<td class='bg3'><b><{$smarty.const._MODABOUT_MODULE_DISCLAIMER}></b></td>
 	</tr>
 
 	<tr>
@@ -171,7 +171,7 @@
 <{if $module_author_word}>
 	<table width='100%' cellspacing="1" cellpadding="3" border="0" class="outer" style="margin-top: 15px;">
 		<tr>
-			<td class='bg3'><b><{$smarty.const._CO_SOBJECT_AUTHOR_WORD}></b></td>
+			<td class='bg3'><b><{$smarty.const._MODABOUT_AUTHOR_WORD}></b></td>
 		</tr>
 
 		<tr>
@@ -182,7 +182,7 @@
 
 <table width='100%' cellspacing="1" cellpadding="3" border="0" class="outer" style="margin-top: 15px;">
 	<tr>
-		<td class='bg3'><b><{$smarty.const._CO_SOBJECT_VERSION_HISTORY}></b></td>
+		<td class='bg3'><b><{$smarty.const._MODABOUT_VERSION_HISTORY}></b></td>
 	</tr>
 
 	<tr>
